--- a/src/renderer/styles/components.css
+++ b/src/renderer/styles/components.css
@@ -78,7 +78,7 @@
     justify-content: flex-end;
     gap: 12px;
 }
-.modal-buttons button {
+.modal-buttons button, .screenshot-loader .cancel-btn {
     border: 1px solid var(--border-color);
     background: var(--bg-tertiary);
     color: var(--fg-primary);
@@ -88,7 +88,7 @@
     border-radius: 0;
     min-width: 80px;
 }
-.modal-buttons button:hover {
+.modal-buttons button:hover, .screenshot-loader .cancel-btn:hover {
     border-color: var(--fg-secondary);
 }
 .modal-buttons .ok-btn {
@@ -131,7 +131,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
     color: white;
     text-align: center;
 }
@@ -153,7 +153,6 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    margin-top: 12px;
 }
 .screenshot-progress-bar {
     width: 250px;
@@ -174,4 +173,7 @@
     color: var(--fg-primary);
     width: 40px;
     text-align: left;
+}
+.screenshot-loader .cancel-btn {
+    margin-top: 5px;
 }
